--- a/src/main/resources/org/example/projekt/views/bookstore.fxml
+++ b/src/main/resources/org/example/projekt/views/bookstore.fxml
@@ -6,19 +6,45 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<HBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="org.example.projekt.controllers.BookstoreController" spacing="20">
+<HBox maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" spacing="20" style="-fx-background-color: #353B3C;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.projekt.controllers.BookstoreController">
     <children>
         <VBox spacing="10" HBox.hgrow="NEVER">
-            <ListView fx:id="recommendedBooksListView" prefWidth="200" />
+            <ListView fx:id="recommendedBooksListView" prefHeight="600.0" prefWidth="200" style="-fx-background-color: #A2999E;" />
         </VBox>
-        <VBox spacing="10" HBox.hgrow="ALWAYS">
-            <TextField fx:id="searchField" promptText="Search Books" />
-            <Button text="Search" onAction="#searchBooks" />
-            <ListView fx:id="searchResultsListView" />
+        <VBox spacing="30.0" HBox.hgrow="ALWAYS">
+         <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="572.0">
+            <children>
+               <Button contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="16.0" prefWidth="117.0" style="-fx-background-color: #846A6A;" text="Log out" textFill="#eef0f3">
+                  <font>
+                     <Font name="Book Antiqua" size="15.0" />
+                  </font>
+               </Button>
+            </children>
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+            <padding>
+               <Insets right="20.0" />
+            </padding>
+         </HBox>
+            <TextField fx:id="searchField" prefHeight="38.0" prefWidth="580.0" promptText="Search Books" style="-fx-background-color: #eef0f3;">
+            <font>
+               <Font name="Bodoni MT" size="12.0" />
+            </font></TextField>
+            <Button onAction="#searchBooks" prefHeight="40.0" prefWidth="105.0" style="-fx-background-color: #846A6A;" text="Search" textFill="#eef0f3">
+            <font>
+               <Font name="Book Antiqua" size="17.0" />
+            </font>
+         </Button>
+            <ListView fx:id="searchResultsListView" prefHeight="391.0" prefWidth="580.0" style="-fx-background-color: #bfb6bb;" />
+         <padding>
+            <Insets top="20.0" />
+         </padding>
         </VBox>
     </children>
     <HBox.margin>
-        <Insets top="20" right="20" bottom="20" left="20"/>
+        <Insets bottom="20" left="20" right="20" top="20" />
     </HBox.margin>
 </HBox>
