--- a/src/main/resources/org/example/projekt/views/login.fxml
+++ b/src/main/resources/org/example/projekt/views/login.fxml
@@ -1,19 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="org.example.projekt.controllers.LoginController">
-    <children>
-        <TextField fx:id="loginField" promptText="Login"/>
-        <PasswordField fx:id="passwordField" promptText="Password"/>
-        <Button text="Login" onAction="#login"/>
-        <Button text="Create Account" onAction="#openRegister"/>
-    </children>
-    <VBox.margin>
-        <Insets top="20" right="20" bottom="20" left="20"/>
-    </VBox.margin>
+<VBox maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" spacing="40.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.projekt.controllers.LoginController">
+   <children>
+      <AnchorPane prefHeight="601.0" prefWidth="800.0" style="-fx-background-color: #353B3C;">
+         <children>
+            <Label layoutX="221.0" layoutY="14.0" prefHeight="90.0" prefWidth="378.0" text="   W E L C O M E   " textFill="#eef0f2" underline="true">
+               <font>
+                  <Font name="Bodoni MT Bold" size="47.0" />
+               </font>
+            </Label>
+            <AnchorPane layoutX="134.0" layoutY="118.0" prefHeight="382.0" prefWidth="532.0" style="-fx-background-color: #A2999E;">
+               <children>
+                  <TextField fx:id="loginField" layoutX="145.0" layoutY="64.0" prefHeight="44.0" prefWidth="339.0" promptText="Login" />
+                  <Label alignment="CENTER_RIGHT" layoutX="18.0" layoutY="133.0" prefHeight="38.0" prefWidth="110.0" text="PASSWORD:">
+                     <font>
+                        <Font name="Book Antiqua Bold Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label alignment="CENTER_RIGHT" layoutX="41.0" layoutY="67.0" prefHeight="38.0" prefWidth="88.0" text="LOGIN:">
+                     <font>
+                        <Font name="Book Antiqua Bold Italic" size="18.0" />
+                     </font>
+                  </Label>
+                  <PasswordField fx:id="passwordField" layoutX="145.0" layoutY="130.0" prefHeight="44.0" prefWidth="339.0" promptText="Password" />
+                  <Button layoutX="192.0" layoutY="327.0" onAction="#openRegister" prefHeight="28.0" prefWidth="148.0" style="-fx-background-color: #846A6A;" text="Create Account" textFill="#eef0f3">
+                     <font>
+                        <Font name="Book Antiqua" size="14.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Button>
+                  <Button layoutX="192.0" layoutY="216.0" onAction="#login" prefHeight="44.0" prefWidth="148.0" style="-fx-background-color: #846A6A;" text="Login" textFill="#eef0f3">
+                     <font>
+                        <Font name="Book Antiqua" size="24.0" />
+                     </font>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Button>
+                  <Label layoutX="195.0" layoutY="302.0" prefHeight="18.0" prefWidth="141.0" text=" You don't have an account? " underline="true">
+                     <font>
+                        <Font name="Calibri Italic" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
+   </children>
 </VBox>
