--- a/src/main/resources/org/example/projekt/views/register.fxml
+++ b/src/main/resources/org/example/projekt/views/register.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #353B3C;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #353B3C;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.projekt.controllers.RegisterController">
    <children>
       <GridPane layoutX="165.6" layoutY="76.0" maxHeight="500.0" maxWidth="736.0" minHeight="474.0" minWidth="458.0" prefHeight="486.0" prefWidth="562.0" style="-fx-background-color: #A2999E;" vgap="30.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="70.0">
          <padding>
