--- a/src/main/resources/org/example/projekt/views/bookstore.fxml
+++ b/src/main/resources/org/example/projekt/views/bookstore.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -11,15 +13,21 @@
 <HBox maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" spacing="20" style="-fx-background-color: #353B3C;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.projekt.controllers.BookstoreController">
     <children>
         <VBox spacing="10" HBox.hgrow="NEVER">
-            <ListView fx:id="recommendedBooksListView" prefHeight="600.0" prefWidth="200" style="-fx-background-color: #A2999E;" />
+            <ListView fx:id="recommendedBooksListView" prefHeight="600.0" prefWidth="200" style="-fx-background-color: #b4adb1;">
+            <effect>
+               <InnerShadow />
+            </effect></ListView>
         </VBox>
         <VBox spacing="30.0" HBox.hgrow="ALWAYS">
          <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="572.0">
             <children>
-               <Button contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="16.0" prefWidth="117.0" style="-fx-background-color: #846A6A;" text="Log out" textFill="#eef0f3">
+               <Button contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="16.0" prefWidth="117.0" style="-fx-background-color: #846A6A;" text=" Log out " textFill="#eef0f3" underline="true">
                   <font>
                      <Font name="Book Antiqua" size="15.0" />
                   </font>
+                  <effect>
+                     <DropShadow />
+                  </effect>
                </Button>
             </children>
             <opaqueInsets>
@@ -29,16 +37,25 @@
                <Insets right="20.0" />
             </padding>
          </HBox>
-            <TextField fx:id="searchField" prefHeight="38.0" prefWidth="580.0" promptText="Search Books" style="-fx-background-color: #eef0f3;">
+            <TextField fx:id="searchField" prefHeight="39.0" prefWidth="580.0" promptText="Search Books" style="-fx-background-color: #eef0f3;">
             <font>
                <Font name="Bodoni MT" size="12.0" />
-            </font></TextField>
+            </font>
+            <effect>
+               <DropShadow height="37.38" radius="14.68" width="23.34" />
+            </effect></TextField>
             <Button onAction="#searchBooks" prefHeight="40.0" prefWidth="105.0" style="-fx-background-color: #846A6A;" text="Search" textFill="#eef0f3">
             <font>
                <Font name="Book Antiqua" size="17.0" />
             </font>
+            <effect>
+               <DropShadow />
+            </effect>
          </Button>
-            <ListView fx:id="searchResultsListView" prefHeight="391.0" prefWidth="580.0" style="-fx-background-color: #bfb6bb;" />
+            <ListView fx:id="searchResultsListView" prefHeight="391.0" prefWidth="580.0" style="-fx-background-color: #b4adb1;">
+            <effect>
+               <InnerShadow />
+            </effect></ListView>
          <padding>
             <Insets top="20.0" />
          </padding>
