--- a/src/main/resources/org/example/projekt/views/bookstore.fxml
+++ b/src/main/resources/org/example/projekt/views/bookstore.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -13,7 +14,15 @@
 <HBox maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" spacing="20" style="-fx-background-color: #353B3C;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.projekt.controllers.BookstoreController">
     <children>
         <VBox spacing="10" HBox.hgrow="NEVER">
-            <ListView fx:id="recommendedBooksListView" prefHeight="600.0" prefWidth="200" style="-fx-background-color: #b4adb1;">
+         <Label alignment="CENTER" prefHeight="79.0" prefWidth="202.0" text="BESTSELLERS:" textFill="#eef0f3" underline="true">
+            <font>
+               <Font name="Bodoni MT" size="25.0" />
+            </font>
+            <effect>
+               <DropShadow />
+            </effect>
+         </Label>
+            <ListView fx:id="recommendedBooksListView" prefHeight="495.0" prefWidth="202.0" style="-fx-background-color: #b4adb1;">
             <effect>
                <InnerShadow />
             </effect></ListView>
