Wszystko działa. Przynajmniej mam taką nadzieje

--- a/src/main/resources/org/example/projekt/views/admin.fxml
+++ b/src/main/resources/org/example/projekt/views/admin.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/11.0.2"
+<BorderPane prefWidth="450" xmlns="http://javafx.com/javafx/11.0.2"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.example.projekt.controllers.AdminPanelController">
     <center>
