--- a/src/main/resources/org/example/projekt/views/login.fxml
+++ b/src/main/resources/org/example/projekt/views/login.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Pos?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="org.example.projekt.controllers.LoginController">
+<VBox prefHeight="700" prefWidth="500" alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.projekt.controllers.LoginController">
     <children>
+        <Label text="Welcome" />
         <TextField fx:id="loginField" promptText="Login"/>
         <PasswordField fx:id="passwordField" promptText="Password"/>
         <Button text="Login" onAction="#login"/>
