--- a/src/main/resources/org/example/projekt/views/order.fxml
+++ b/src/main/resources/org/example/projekt/views/order.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx"
+<VBox prefWidth="350" prefHeight="300" xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
       fx:controller="org.example.projekt.controllers.OrderAddressController"
       alignment="CENTER"
