--- a/src/main/resources/org/example/projekt/views/register.fxml
+++ b/src/main/resources/org/example/projekt/views/register.fxml
@@ -2,37 +2,40 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
 
-<GridPane xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.projekt.controllers.RegisterController">
+<?import javafx.scene.layout.Region?>
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="org.example.projekt.controllers.RegisterController" alignment="CENTER">
     <padding>
         <Insets top="10" right="10" bottom="10" left="10"/>
     </padding>
-    <hgap>10</hgap>
-    <vgap>10</vgap>
-    <Text text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
-    <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+    <children>
+        <!-- Elementy GridPane -->
+        <GridPane hgap="10" vgap="10">
+            <!-- Elementy GridPane -->
+            <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="0" promptText="Name"/>
 
-    <Text text="Last name:" GridPane.columnIndex="0" GridPane.rowIndex="1"/>
-    <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+            <TextField fx:id="lastNameField" GridPane.columnIndex="1" GridPane.rowIndex="1" promptText="Last name"/>
 
-    <Text text="Email:" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
-    <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            <TextField fx:id="emailField" GridPane.columnIndex="1" GridPane.rowIndex="2" promptText="Email"/>
 
-    <Text text="Phone number:" GridPane.columnIndex="0" GridPane.rowIndex="3"/>
-    <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+            <TextField fx:id="numberField" GridPane.columnIndex="1" GridPane.rowIndex="3" promptText="Phone number"/>
 
-    <Text text="Username:" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
-    <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            <TextField fx:id="usernameField" GridPane.columnIndex="1" GridPane.rowIndex="4" promptText="Username"/>
 
-    <Text text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="5"/>
-    <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+            <PasswordField fx:id="passwordField" GridPane.columnIndex="1" GridPane.rowIndex="5" promptText="Password"/>
 
-    <Text text="Confirm Password:" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
-    <PasswordField fx:id="confirmPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <PasswordField fx:id="confirmPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="6" promptText="Confirm Password"/>
+        </GridPane>
 
-    <Button text="Register" onAction="#register" GridPane.columnIndex="1" GridPane.rowIndex="7"/>
-</GridPane>
+        <VBox prefHeight="20"></VBox>
+
+        <VBox alignment="CENTER" spacing="20">
+            <Button text="Register" onAction="#register"/>
+        </VBox>
+    </children>
+</VBox>
